k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knowledge
  labels:
    name: knowledge
    app: knowledge-app
