k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledge
  namespace: knowledge
  labels:
    app: knowledge
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: knowledge
---
# NodePort service for external access
apiVersion: v1
kind: Service
metadata:
  name: knowledge-nodeport
  namespace: knowledge
  labels:
    app: knowledge
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: knowledge
